# FindingModelForge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FindingModelForge.code-workspace  README.md  Taskfile.yml  TechStack.md  docker-compose.prod.yml  docker-compose.yml  hello.py  package-lock.json  package.json  pyproject.toml  run_app.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: auth.py  config.py  database.py  dependencies.py  health.py  main.py  models.py
app/routers/: auth.py  finding_models.py  pages.py  static.py  users.py
deploy/: docker-compose.yml
docs/: DARK_MODE_GUIDE.md  FLOWBITE_COMPONENTS.md  MYPY_PRECOMMIT_FIXES.md  ORGANIZATION_MANAGEMENT.md  PROFILE_IMPLEMENTATION_SUMMARY.md  PROFILE_PAGE_FEATURES.md  REFACTORING_SUMMARY.md  USER_IMPROVEMENTS.md  WELCOME_FLOW_IMPLEMENTATION.md
fastapi-starter/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  uv.toml
fastapi-starter/.github/workflows/: ci.yml
fastapi-starter/app/: __init__.py  auth.py  config.py  health.py  main.py  models.py
fastapi-starter/app/routers/: __init__.py  auth.py  pages.py
fastapi-starter/scripts/: build.sh  check.sh  dev.sh  lint.sh  test.sh
fastapi-starter/static/css/: style.css
fastapi-starter/static/js/: app.js
fastapi-starter/templates/: base.html  dashboard.html  index.html  login.html
fastapi-starter/templates/components/: footer.html  navbar.html
fastapi-starter/tests/: conftest.py  test_auth.py  test_health.py  test_pages.py
findingmodelforge/: main.py
findingmodelforge/gui/: home.py  login.py  theme.py
plans/: Minisprint-2024-11.md  Minisprint-2025-01.md  Work_2025–04.md  musings.md
scripts/: build.sh  check.sh  dev.sh  lint.sh  test.sh
src/: input.css
static/css/: style.css
static/images/: site.webmanifest
static/js/: app.js
templates/: base.html  create_finding_model.html  dashboard.html  finding_model_display.html  index.html  login.html  profile.html
templates/components/: finding_model_display.html  finding_model_full_display.html  footer.html  navbar.html
tests/: conftest.py  test_auth.py  test_finding_models.py  test_main.py  test_pages.py  test_static.py  test_user_repo.py
tests/data/: abdominal_abscess.fm.json  coronary_artery_calcifications.fm.json
zOld/: Dockerfile
zOld/findingmodelforge/common/: config.py
zOld/findingmodelforge/gui/: home.py  login.py
