[project]
name = "findingmodelforge"
version = "0.1.0"
description = "Functionality for creating imaging finding models/semantic labels"
authors = [
    { name = "Tarik Alkasab", email = "info@openimagingdata.org" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/findingmodel", "packages/frontend", "packages/backend"]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0"
]

[tool.ruff]
select = ["E", "F", "I", "B"]
line-length = 88
src = ["packages"]